# GitWhisper

./: .dockerignore  .env.example  .gitignore  .gitwhisper.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose.yml  temp2.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile
docs/: RELEASE.md
docs/releases/: v0.1.0.md
exports/: feedback-test.json  postgres-feedback-final.csv  postgres-feedback-final.json  postgres-feedback-test.csv  postgres-feedback-test.json
src/: capture.rs  cli.rs  collaboration.rs  config.rs  dashboard.rs  error.rs  feedback.rs  git.rs  history.rs  hooks.rs  main.rs  spinner.rs  storage.rs
src/ai/: cloud_gemini.rs  context_optimizer.rs  local_ollama.rs  mod.rs  model_selector.rs  reasoning_chain.rs
src/analysis/: behavior_patterns.rs  bug_predictor.rs  codebase_insights.rs  diff_parser.rs  impact_analysis.rs  intent_detection.rs  knowledge_risk.rs  mod.rs  performance_analyzer.rs  quality_analyzer.rs  refactor_prioritizer.rs  security_analyzer.rs
src/audit/: mod.rs
src/auth/: mod.rs
src/collectors/: commands.rs  env.rs  ide.rs  mod.rs  review_context.rs  tests.rs
src/db/: mod.rs
src/generators/: adr_generator.rs  mod.rs  wiki_generator.rs
src/integrations/: discord.rs  github.rs  gitlab.rs  mod.rs  slack.rs
src/metrics/: exporter.rs  mod.rs
src/storage/: cache_manager.rs  context.rs  load.rs  predictive_cache.rs  save.rs
(+17 files in other folders)
