[package]
name = "gitwhisper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "6"
colored = "3.1.1"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
dotenvy = "0.15"
toml = "0.8"
