[package]
name = "gitwhisper"
version = "0.1.0"
edition = "2021"
authors = ["SHREESHANTH99"]
description = "AI-powered Git commit intelligence for context capture, code evolution, risk analysis, and team knowledge."
license = "MIT"
repository = "https://github.com/SHREESHANTH99/GitWhisper"
homepage = "https://github.com/SHREESHANTH99/GitWhisper"
readme = "README.md"
keywords = ["git", "ai", "cli", "devtools", "analytics"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "6"
colored = "3.1.1"
indicatif = "0.17"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
dotenvy = "0.15"
toml = "0.8"
walkdir = "2"
postgres = { version = "0.19", default-features = false, features = ["with-chrono-0_4"] }
thiserror = "2"
